[package]
name = "CloudIPsyncr"
version = "1.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.1"
crossterm = "0.27.0"
input-macro = "0.2.0"
is-root = "0.1.2"
json = "0.12.4"
reqwest = { version = "0.11.18", features = ["blocking","json"] }
serde_json = "1.0.99"
termion = "2.0.1"
